--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,7 @@ authors = ["Camille Fassett <camillefassett@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pandas = "^1.3.2"
-matplotlib = "^3.4.3"
+pytest = "^7.0.1"
 
 [tool.poetry.dev-dependencies]
 
